[tool.poetry]
name = "calculator_library"
version = "0.1.0"
description = ""
authors = ["Tom Purl <tom.purl@wi-tronix.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipython = "^8.4.0"
ipdb = "^0.13.9"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
